Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
Impala 2.8.0
-
None
Description
Boost is inconsistent in whether the maximum supported year is 9999 or 10000. This means that sometimes values with year=10000 get caught by validation and in other cases don't get caught. I think the severity is not high, since the exception-throwing validation uses the looser limit of 10000.
I filed a bug against boost: https://svn.boost.org/trac/boost/ticket/12630
Attachments
Issue Links
- is related to
-
IMPALA-4498 Timestamp timezone conversion causes a crash
- Resolved